--- a/index.html
+++ b/index.html
@@ -3,7 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+
+    <meta name = "title" content="Travelia">
+    <meta name="description" content="This is a travel html template made by Eamon Shane">
+    
+    <link rel="stylesheet" href="./favicon.svg" type = "image/svg+xml">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
+
+<link rel="stylesheet" href="">
+
+
 </head>
 <body>
     <h1> this is heading </h1>
