--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
     <!-- #headeer -->
 
-    <header class="header active" data-header="">
+    <header class="header active" data-header>
         <div class="container">
 
             <a href="#" class="logo">
@@ -44,7 +44,7 @@
                         <img src="./assets/images/logo.svg" width="187" height="38" alt="logo" class="src">
                     </a>
 
-                    <button class="nav-toggle-btn" aria-label="close menu" data-nav-toggler="">
+                    <button class="nav-toggle-btn" aria-label="close menu" data-nav-toggler>
                     <ion-icon name="close-outline" aria-hidden="true"></ion-icon>
 
                     </button>
@@ -74,12 +74,12 @@
                 </div>
             </nav>
 
-            <button class="nac-toggle-btn" aria-label="open menu" data-nav-toggler="">
+            <button class="nav-toggle-btn" aria-label="open menu" data-nav-toggler>
             <ion-icon name="menu-outline" aria-hidden="true"></ion-icon>
 
             </button>
 
-            <div class="overlay" data-overlay data-nav-toggler=""></div>
+            <div class="overlay" data-overlay data-nav-toggler></div>
 
         </div>
     </header>
